[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/fonts/menu_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://common/settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/pause_screen.gd" type="Script" id=4]
[ext_resource path="res://resources/materials/shader/shader_blur.tres" type="Material" id=5]
[ext_resource path="res://prefabs/ui/theme_btn.gd" type="Script" id=6]
[ext_resource path="res://common/console.tscn" type="PackedScene" id=7]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgBlur" type="ColorRect" parent="."]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Margin"]
margin_left = 32.0
margin_top = 440.0
margin_right = 928.0
margin_bottom = 508.0
size_flags_vertical = 8
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="Margin/Container"]
margin_right = 444.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "PASUED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnContainer" type="VBoxContainer" parent="Margin/Container"]
margin_left = 736.0
margin_right = 896.0
margin_bottom = 68.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 10
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnBack" type="Button" parent="Margin/Container/BtnContainer"]
margin_top = 4.0
margin_right = 160.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "BACK"
align = 2
script = ExtResource( 6 )

[node name="BtnSettings" type="Button" parent="Margin/Container/BtnContainer"]
visible = false
margin_top = 33.0
margin_right = 160.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "SETTINGS"
align = 2
script = ExtResource( 6 )

[node name="BtnQuit" type="Button" parent="Margin/Container/BtnContainer"]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "QUIT"
align = 2
script = ExtResource( 6 )

[node name="Console" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Settings" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Margin/Container/BtnContainer/BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="Margin/Container/BtnContainer/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="Margin/Container/BtnContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
